--- a/index.html
+++ b/index.html
@@ -98,18 +98,27 @@
         </div>
 
         <div class="timing-section row">
-            <div class="detail-col col-lg-6">
+            <div class="detail-col col-lg-8">
                 <div id="details-c" class="detail-container">
                     <h1 class="about-header">About Us</h1>
-                    <h1>Heritage Utsav is the annual cultural fest of Heritage Institute of Technology, Kolkata.
-                            With one of the biggest artist line-up ever this year, Heritage Utsav 2019 is touted to be one of the best college fests of Eastern India.
-                            With over 40 technical and cultural events and an overall footfall of 40,000 students spanning 6 days of the fest, Heritage Utsav is something you will be looking forward to.
-                            1st April - 6th April are the dates one must book for a fun filled ride of inter-college competitions and great performances by imminent artists.
+                    <h1 class="about-desc">
+                        Heritage Utsav is the reformed, annual cultural and technical festival of
+                        Heritage Institute of Technology, Kolkata - one of the finest education institutions in
+                        the state. It combines the realms of technology and culture into 6 days of fun and ecstacy.
+                        with events ranging from varied fields - dance, music, theatre, fine arts, sciecne, technology,
+                        debating, photography, flim and literature. The highlights of the festival are usually the DJ and
+                        Guest Performances that span over the last two evenings. The festivals the gathering of talents from
+                        all aforesaid fields, from al over the city in paticular and the country in general.
+                        <br>
+                        With a plethora of cultural, sports and technical events and inter-college competitions, the 16th anniversary
+                        of the fest, Heritage Utsav 2019 is touted to be one of the best college fests of Eastern India. Gear up for a
+                        major happening from the April 1st to 6th, 2019.
+
                     </h1>
                     <!--button>Hello buttob</button-->
                 </div>
             </div>
-            <div id="details-t" class="timer-col col-lg-6">
+            <div id="details-t" class="timer-col col-lg-4">
                 <h1 class="countdown"></h1>
             </div>
         </div>
@@ -125,21 +134,21 @@
                         </br></br><i class="fas fa-terminal"></i>
                     </h1>
                     </br>
-                    <a href="./sources/prc/technical.html"><button>Schedule</button></a>
+                    <a href=""><button>Get Schedule</button></a>
                 </div>
                 <div class="event-card">
                     <h1>Guest Performances
                         </br></br><i class="fas fa-heart"></i>
                     </h1>
                     </br>
-                    <a href="./sources/prc/events.html"><button>Schedule</button></a>
+                    <a href=""><button>Get Schedule</button></a>
                 </div>
                 <div class="event-card">
                     <h1>Cultural Events
                         </br></br><i class="fas fa-person-booth"></i>
                     </h1>
                     </br>
-                    <a href="./sources/prc/cultural.html"><button>Schedule</button></a>
+                    <a href=""><button>Get Schedule</button></a>
                 </div>
             </div>
 
@@ -149,6 +158,11 @@
             <div class="col-lg-12 brochure-button">
                 <center>
                     <a href="./sources/Heritage Utsav 2019 Brochure.pdf" download><button>Download Brochure</button></a>
+                </center>
+            </div>
+            <div class="col-lg-12 register-button">
+                <center>
+                    <a href="http://61.12.70.61:615/HeritageUtsav19EvtRegd.aspx" download><button>Register Here</button></a>
                 </center>
             </div>
         </div>
@@ -172,59 +186,27 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img class="d-block w-100" src="./sources/imgs/img1.jpg" alt="First slide">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>The Best Header</h5>
-                                <p>The best description</p>
-                            </div>
                         </div>
                         <div class="carousel-item">
                             <img class="d-block w-100" src="./sources/imgs/img2.jpg" alt="Second slide">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>The Best Header</h5>
-                                <p>The best description</p>
-                            </div>
                         </div>
                         <div class="carousel-item">
                             <img class="d-block w-100" src="./sources/imgs/img3.jpg" alt="Third slide">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>The Best Header</h5>
-                                <p>The best description</p>
-                            </div>
                         </div>
                         <div class="carousel-item">
                             <img class="d-block w-100" src="./sources/imgs/img4.jpg" alt="Fourth slide">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>The Best Header</h5>
-                                <p>The best description</p>
-                            </div>
                         </div>
                         <div class="carousel-item">
                             <img class="d-block w-100" src="./sources/imgs/img5.jpg" alt="Fifth slide">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>The Best Header</h5>
-                                <p>The best description</p>
-                            </div>
                         </div>
                         <div class="carousel-item">
                             <img class="d-block w-100" src="./sources/imgs/img6.jpg" alt="Sixth slide">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>The Best Header</h5>
-                                <p>The best description</p>
-                            </div>
                         </div>
                         <div class="carousel-item">
                             <img class="d-block w-100" src="./sources/imgs/img7.jpg" alt="Seventh slide">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>The Best Header</h5>
-                                <p>The best description</p>
-                            </div>
                         </div>
                         <div class="carousel-item">
                             <img class="d-block w-100" src="./sources/imgs/img8.jpg" alt="Eighth slide">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>The Best Header</h5>
-                                <p>The best description</p>
-                            </div>
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -251,10 +233,10 @@
                 <div class="col-lg-4">
                     <h2 class="footer-head">Important Links</h2>
                     <br>
-                    <p>Home</p>
-                    <p>Office Bearers</p>
-                    <p>Events</p>
-                    <p>Contact Us</p>
+                    <a href="#details-c"><p>About Us</p></a>
+                    <a href="#details-eve"><p>Events</p></a>
+                    <a href="#gal-head"><p>Gallery</p></a>
+                    <a href=""><p>Our Team</p></a>
                 </div>
                 <div class="col-lg-4">
                     <h2 class="footer-head">Support & Feedback</h2>
