--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <!-- imported fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cardo|Playfair+Display:400,700,900" rel="stylesheet">
 
     <!-- moment.js file -->
     <script src="js/moment.min.js"></script>
@@ -135,21 +136,21 @@
                         </br></br><i class="fas fa-terminal"></i>
                     </h1>
                     </br>
-                    <a href=""><button>Get Schedule</button></a>
+                    <a href="./technical.html" target="_blank"><button>Get Schedule</button></a>
                 </div>
                 <div class="event-card">
                     <h1>Guest Performances
                         </br></br><i class="fas fa-heart"></i>
                     </h1>
                     </br>
-                    <a href=""><button>Get Schedule</button></a>
+                    <a href="./guests.html" target="_blank"><button>Get Schedule</button></a>
                 </div>
                 <div class="event-card">
                     <h1>Cultural Events
                         </br></br><i class="fas fa-person-booth"></i>
                     </h1>
                     </br>
-                    <a href=""><button>Get Schedule</button></a>
+                    <a href="./cultural.html" target="_blank"><button>Get Schedule</button></a>
                 </div>
             </div>
 
@@ -218,6 +219,27 @@
                 </div>
             </div>
             <div class="col-lg-2">
+            </div>
+        </div>
+
+        <div class="row contact-us">
+            <div class="col-lg-5 contact-desc">
+                <h1>Contact Us</h1>
+                <br><br><br><br>
+                <div class="follow-icons">
+                    <p>
+                        <a href="www.instagram.com/heritageutsav2019" target="_blank"><i class="fab fa-facebook"></i></a>
+                        &nbsp;
+                        <a href="https://www.instagram.com/heritageutsav2019" target="_blank"><i class="fab fa-instagram"></i></a>
+                        &nbsp;
+                        <a href="https://www.youtube.com/watch?v=-4ouUrwYOsY" target="_blank"><i class="fab fa-youtube"></i></a>
+                    </p>
+                </div>
+                <br>
+                <a href="mailto:someone@example.com?Subject=Heritage%20Utsav" target="_top"><button class="email-us-button">Email Us</button></a>
+            </div>
+            <div class="col-lg-7">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3685.6506485772456!2d88.41646975101429!3d22.517286940599575!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a027409f5382055%3A0xa47cf90c19bf73c2!2sHeritage+Institute+of+Technology!5e0!3m2!1sen!2sin!4v1553706793583" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
         </div>
 
