--- a/cultural.html
+++ b/cultural.html
@@ -28,46 +28,50 @@
 
 				<div class="each-day">
 					<table width="100%">
-						<tr>
-							<th class="event-date" colspan="2" style="text-align:center">
-								<h2>4th April</h2>
-							</th>
-						</tr>
-						<tr><td>Eastern Fusion Band Competetion</td>
-							<td>10am-3:30pm</td>
-						</tr>
-						<tr><td>Western Group Dance</td>
-							<td>2-4pm </td>
-						</tr>
-						<tr><td>Creative Writing</td>
-							<td>11am-12pm</td>
-						</tr>
-						<tr><td>Adspoof Competetion</td>
-							<td>10am-12:30pm</td>
-						</tr>
-						<tr><td>Script Writing</td>
-							<td>1-2pm</td>
-						</tr>
-						<tr><td>Film Quiz</td>
-							<td>1-4pm</td>
-						</tr>
-						<tr><td>Movie Screening</td>
-							<td>10-5pm</td>
-						</tr>
-						<tr><td>Antakshari(Faculty)</td>
-							<td>4-5pm</td>
-						</tr>
-						<tr><td>Stage Drama</td>
-							<td>1-5pm</td>
-						</tr>
-						<tr><td>Photography exhibition</td>
-							<td>12:30 - 5pm</td>
-						</tr>
-						<tr><td>Film Debate</td>
-							<td>12:30 - 5pm</td>
-						</tr>
-					</table>
-				</div>
+					<tr>
+						<th class="event-date" colspan="2" style="text-align:center;">
+							<h2 class="event-date">4th April</h2>
+						</th>
+					</tr>
+					<tr>
+						<td>Eastern Fusion Band Competetion</td>
+						<td>10am-3:30pm</td>
+					</tr>
+					<tr><td>Western Group Dance</td>
+						<td>2-4pm </td>
+					</tr>
+					<tr><td>Creative Writing</td>
+						<td>11am-12pm</td>
+					</tr>
+					<tr><td>Adspoof Competetion</td>
+						<td>10am-12:30pm</td>
+					</tr>
+					<tr><td>Script Writing</td>
+						<td>1-2pm</td>
+					</tr>
+					<tr><td>Film Quiz</td>
+						<td>1-4pm</td>
+					</tr>
+					<tr><td>Movie Screening</td>
+						<td>10-5pm</td>
+					</tr>
+					<tr><td>Antakshari (Faculty)</td>
+						<td>4-5pm</td>
+					</tr>
+					<tr><td>Stage Drama</td>
+						<td>1-5pm</td>
+					</tr>
+					<tr><td>Photography exhibition</td>
+						<td>12:30 - 5pm</td>
+					</tr>
+					<tr><td>Film Debate</td>
+						<td>12:30 - 5pm</td>
+					</tr>
+				</table>
+			</div>
+
+
+
 
 				<div class="each-day">
 					<table width="100%">
@@ -100,8 +104,8 @@
 						<tr><td>Street Play</td>
 							<td>11pm - 3pm</td>
 						</tr>
-						<tr><td>Photography Competetion(On Spot)</td>
-							<td>11pm-3</td>
+						<tr><td>Photography Competetion</td>
+							<td>11pm - 3pm</td>
 						</tr>
 						<tr><td>Movie Screening</td>
 							<td>3:30 - 6pm</td>
@@ -143,7 +147,7 @@
 						<tr><td>Review competetion</td>
 							<td>1-3pm</td>
 						</tr>
-						<tr><td>Photography(Workshop)</td>
+						<tr><td>Photography (Workshop)</td>
 							<td>11am-1pm</td>
 						</tr>
 						<tr><td>Movie Screening</td>
@@ -163,7 +167,6 @@
 						</tr>
 					</table>
 				</div>
-			</table>
 
 		</div>
 	</div>
