--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                 <br><br><br><br>
                 <div class="follow-icons">
                     <p>
-                        <a href="www.instagram.com/heritageutsav2019" target="_blank"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/heritageutsav2k19/" target="_blank"><i class="fab fa-facebook"></i></a>
                         &nbsp;
                         <a href="https://www.instagram.com/heritageutsav2019" target="_blank"><i class="fab fa-instagram"></i></a>
                         &nbsp;
