added sudo code

--- a/technical.html
+++ b/technical.html
@@ -45,6 +45,9 @@
 					<tr><td>CircuiTricks</td>
 						<td>12-5pm</td>
 					</tr>
+					<tr><td>Sudocode</td>
+						<td>10am - 11am</td>
+					</tr>
 					<tr><td>Rural-La-Carte</td>
 						<td>12noon-2pm</td>
 					</tr>
