--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                     <ul>
                         <li><a href="#details-c">About</a></li>
                         <li><a href="#details-eve">Events</a></li>
-                        <li><a href="http://61.12.70.61:615/HeritageUtsav19EvtRegd.aspx">Register Now</a></li>
+                        <li><a href="http://61.12.70.61:615/HeritageUtsav19EvtRegd.aspx">Registeration</a></li>
                         <li><a href="#gal-head">Gallery</a></li>
-                        <li><a href="#details-c">Team</a></li>
-                        <li><a href="#details-c">Contact</a></li>
+                        <!--li><a href="#details-c">Team</a></li-->
+                        <li><a href="#details-contact">Contact</a></li>
                         <p id="nav-copyright">© 2019 HU19 All Rights Reserved</p>
                     </ul>
                 </div>
@@ -222,7 +222,7 @@
             </div>
         </div>
 
-        <div class="row contact-us">
+        <div id="details-contact" class="row contact-us">
             <div class="col-lg-5 contact-desc">
                 <h1>Contact Us</h1>
                 <br><br><br><br>
@@ -236,7 +236,7 @@
                     </p>
                 </div>
                 <br>
-                <a href="mailto:someone@example.com?Subject=Heritage%20Utsav" target="_top"><button class="email-us-button">Email Us</button></a>
+                <a href="mailto:heritageutsav2019@gmail.com?Subject=Heritage%20Utsav" target="_top"><button class="email-us-button">Email Us</button></a>
             </div>
             <div class="col-lg-7">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3685.6506485772456!2d88.41646975101429!3d22.517286940599575!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a027409f5382055%3A0xa47cf90c19bf73c2!2sHeritage+Institute+of+Technology!5e0!3m2!1sen!2sin!4v1553706793583" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
@@ -256,7 +256,7 @@
                     <a href="#details-c"><p>About Us</p></a>
                     <a href="#details-eve"><p>Events</p></a>
                     <a href="#gal-head"><p>Gallery</p></a>
-                    <a href=""><p>Our Team</p></a>
+                    <!--a href=""><p>Our Team</p></a-->
                 </div>
                 <div class="col-lg-4">
                     <h2 class="footer-head">Support & Feedback</h2>
