working on optimisations

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HU19 | Home</title>
+    <meta name="description" content="Heritage Utsav is the annual cultural and tech fest of Heritage
+        Institute of Technology, Kolkata. Heritage Utsav 2019 is going to be organized from April 1st to 6th, 2019.
+        Heritage Utsav will be filled with fun and ecstacy. Come and enjoy all the events.">
+    <title>HU19 | Home ( Heritage Utsav 2019 )</title>
     <link rel="icon" type="image/ico" href="sources/imgs/logo.png" />
 
     <!-- bootstrap CDN -->
@@ -18,8 +21,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/debug.addIndicators.min.js"></script>
 
     <!-- imported fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Cardo|Playfair+Display:400,700,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cardo|Playfair+Display:400,700" rel="stylesheet">
 
     <!-- moment.js file -->
     <script src="js/moment.min.js"></script>
@@ -105,7 +107,7 @@
                     <h1 class="about-header">About Us</h1>
                     <h1 class="about-desc">
                         Heritage Utsav is the reformed annual cultural and technical festival of
-                        Heritage Institute of Technology, Kolkata - one of the finest educational institutions
+                        <a href="http://www.heritageit.edu/" target="_blank">Heritage Institute of Technology, Kolkata</a> - one of the finest educational institutions
                         in the state. It combines the realms of technology and culture into 6 days of fun and ecstasy.
                         With events ranging from varied fields - dance, music, theatre, fine arts, science,
                         technology, debating, photography, film and literature. The highlights of the festival
@@ -127,7 +129,7 @@
 
         <div class="row events" style="width:100%;">
             <div class="col-lg-2">
-            </div>  
+            </div>
 
             <div id="details-eve" class="col-lg-8 event-card-container">
                 <h1 class="events-header">Events</h1>
