--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <h1 class="about-header">About Us</h1>
                     <h1 class="about-desc">
                         Heritage Utsav is the reformed annual cultural and technical festival of
-                        <a href="http://www.heritageit.edu/" target="_blank">Heritage Institute of Technology, Kolkata</a> - one of the finest educational institutions
+                        <a style="color: black;" href="http://www.heritageit.edu/" target="_blank">Heritage Institute of Technology, Kolkata</a> - one of the finest educational institutions
                         in the state. It combines the realms of technology and culture into 6 days of fun and ecstasy.
                         With events ranging from varied fields - dance, music, theatre, fine arts, science,
                         technology, debating, photography, film and literature. The highlights of the festival
