--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <!-- internal files -->
     <script src="js/script.js"></script>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
     <link rel="stylesheet" href="css/hamburgers.min.css">
 </head>
 <body>
@@ -235,7 +235,7 @@
                 <div class="row" id="team-sec">
                     <div class="team-adhoc col-lg-12">
                         <hr>
-                        <h1>Ad-hoc Committee</h1>
+                        <h1>Student Committee</h1>
                         <hr>
                         <br>
                     </div>
@@ -260,7 +260,7 @@
                             <center>
                                 <img src="./sources/imgs/Suparno.jpeg" alt="">
                                 <h1>Suparno Banerjee</h1>
-                                <h2>CSE 4th</h2>
+                                <h2>HITK CSE 4th</h2>
                                 <hr>
                                 <p class="team-links">
                                     <a href="https://www.facebook.com/heritageutsav2k19/" target="_blank"><i class="fab fa-facebook"></i></a>
@@ -275,7 +275,7 @@
                             <center>
                                 <img src="./sources/imgs/Debrup.jpeg" alt="">
                                 <h1>Debrup Dutta</h1>
-                                <h2>ECE 4th</h2>
+                                <h2>HITK ECE 4th</h2>
                                 <hr>
                                 <p class="team-links">
                                     <a href="https://www.facebook.com/heritageutsav2k19/" target="_blank"><i class="fab fa-facebook"></i></a>
@@ -290,7 +290,7 @@
                             <center>
                                 <img src="./sources/imgs/abhinav.jpeg" alt="">
                                 <h1>Abhinav Roy</h1>
-                                <h2>CE 4th</h2>
+                                <h2>HITK CE 4th</h2>
                                 <hr>
                                 <p class="team-links">
                                     <a href=" https://m.facebook.com/abhinaviit?ref=bookmarks" target="_blank"><i class="fab fa-facebook"></i></a>
@@ -305,7 +305,7 @@
                             <center>
                                 <img src="./sources/imgs/Ritesh Ranjan.jpeg" alt="">
                                 <h1>Ritesh Ranjan</h1>
-                                <h2>CE 4th</h2>
+                                <h2>HITK CE 4th</h2>
                                 <hr>
                                 <p class="team-links">
                                     <a href="https://www.facebook.com/heritageutsav2k19/" target="_blank"><i class="fab fa-facebook"></i></a>
@@ -320,7 +320,7 @@
                             <center>
                                 <img src="./sources/imgs/Ani sudhanshu.jpeg" alt="">
                                 <h1>Ani Sudhanshu</h1>
-                                <h2>CE 4th</h2>
+                                <h2>HITK CE 4th</h2>
                                 <hr>
                                 <p class="team-links">
                                     <a href="https://www.facebook.com/heritageutsav2k19/" target="_blank"><i class="fab fa-facebook"></i></a>
@@ -335,7 +335,7 @@
                             <center>
                                 <img src="./sources/imgs/Anik.jpeg" alt="">
                                 <h1>Anik Sarkar</h1>
-                                <h2>ChE 4th</h2>
+                                <h2>HITK ChE 4th</h2>
                                 <hr>
                                 <p class="team-links">
                                     <a href="https://www.facebook.com/heritageutsav2k19/" target="_blank"><i class="fab fa-facebook"></i></a>
@@ -350,7 +350,7 @@
                             <center>
                                 <img src="./sources/imgs/Sambolim.jpeg" alt="">
                                 <h1>Shambolin Bose</h1>
-                                <h2>ME 4th</h2>
+                                <h2>HITK ME 4th</h2>
                                 <hr>
                                 <p class="team-links">
                                     <a href="https://www.facebook.com/heritageutsav2k19/" target="_blank"><i class="fab fa-facebook"></i></a>
@@ -364,8 +364,8 @@
                         <div class="card">
                             <center>
                                 <img src="./sources/imgs/Kumar Shivam.jpeg" alt="">
-                                <h1>Kumar Shivam</h1>
-                                <h2>ECE 4th</h2>
+                                <h1>Kumar Shiwam</h1>
+                                <h2>HITK ECE 4th</h2>
                                 <hr>
                                 <p class="team-links">
                                     <a href="https://m.facebook.com/kumar.shiwam.18?ref=bookmarks" target="_blank"><i class="fab fa-facebook"></i></a>
@@ -380,7 +380,7 @@
                             <center>
                                 <img src="./sources/imgs/Suan darshan.jpeg" alt="">
                                 <h1>Suan Darshan</h1>
-                                <h2>ECE 4th</h2>
+                                <h2>HITK ECE 4th</h2>
                                 <hr>
                                 <p class="team-links">
                                     <a href="https://www.facebook.com/heritageutsav2k19/" target="_blank"><i class="fab fa-facebook"></i></a>
@@ -395,7 +395,7 @@
                             <center>
                                 <img src="./sources/imgs/Ranvijay rana.jpeg" alt="">
                                 <h1>Ranvijay Rana</h1>
-                                <h2>ME 4th</h2>
+                                <h2>HITK ME 4th</h2>
                                 <hr>
                                 <p class="team-links">
                                     <a href="https://m.facebook.com/ranvijayrana100?ref=bookmarks" target="_blank"><i class="fab fa-facebook"></i></a>
@@ -423,7 +423,7 @@
                             <center>
                                 <img src="./sources/imgs/akash.jpg" alt="">
                                 <h1>Akash Shaw</h1>
-                                <h2>CSE 4th</h2>
+                                <h2>HITK CSE 4th</h2>
                                 <hr>
                                 <p class="team-links">
                                     <a href="https://www.facebook.com/profile.php?id=100014998475997" target="_blank"><i class="fab fa-facebook"></i></a>
@@ -438,7 +438,7 @@
                             <center>
                                 <img src="./sources/imgs/Raunak.jpeg" alt="">
                                 <h1>Raunak Sharma</h1>
-                                <h2>CSE 3rd</h2>
+                                <h2>HITK CSE 3rd</h2>
                                 <hr>
                                 <p class="team-links">
                                     <a href="https://github.com/raunak-sharma" target="_blank"><i class="fab fa-github"></i></i></a>
@@ -453,7 +453,7 @@
                             <center>
                                 <img src="./sources/imgs/anindit.jpg" alt="">
                                 <h1>Anindit Sinha</h1>
-                                <h2>CSE 3rd</h2>
+                                <h2>HITK CSE 3rd</h2>
                                 <hr>
                                 <p class="team-links">
                                     <a href="https://www.facebook.com/anindit.sinha.5" target="_blank"><i class="fab fa-facebook"></i></a>
@@ -468,7 +468,7 @@
                             <center>
                                 <img src="./sources/imgs/priyanka.jpg" alt="">
                                 <h1>Priyanka Roy Chowdhury</h1>
-                                <h2>CSE 3rd</h2>
+                                <h2>HITK CSE 3rd</h2>
                                 <hr>
                                 <p class="team-links">
                                     <a href="https://www.facebook.com/priyanka.roychowdhury.5" target="_blank"><i class="fab fa-facebook"></i></a>
@@ -481,9 +481,24 @@
                         </div>
                         <div class="card">
                             <center>
+                                <img src="./sources/imgs/Piyush.jpeg" alt="">
+                                <h1>Piyush Maheshwari</h1>
+                                <h2>HITK CSE 3rd</h2>
+                                <hr>
+                                <p class="team-links">
+                                    <a href="https://www.facebook.com/piyush.maheswari.946" target="_blank"><i class="fab fa-facebook"></i></a>
+                                    &nbsp;
+                                    <a href="https://instagram.com/piyushmaheswari27?utm_source=ig_profile_share&igshid=fsle7g3qtwok" target="_blank"><i class="fab fa-instagram"></i></a>
+                                    &nbsp;
+                                    <a href="https://www.linkedin.com/in/piyush-maheswari-835424138" target="_blank"><i class="fab fa-linkedin"></i></a>
+                                </p>
+                            </center>
+                        </div>
+                        <div class="card">
+                            <center>
                                 <img src="./sources/imgs/Mehul.jpeg" alt="">
                                 <h1>Mehul Agarwal</h1>
-                                <h2>CSE 3rd</h2>
+                                <h2>HITK CSE 3rd</h2>
                                 <hr>
                                 <p class="team-links">
                                     <a href="https://www.facebook.com/mehul.agarwal.3150" target="_blank"><i class="fab fa-facebook"></i></a>
@@ -497,8 +512,8 @@
                         <div class="card">
                             <center>
                                 <img src="./sources/imgs/Bhavesh.jpg" alt="">
-                                <h1>Bhaavesh Mishra</h1>
-                                <h2>CSE 3rd</h2>
+                                <h1>Bhavesh Mishra</h1>
+                                <h2>HITK CSE 3rd</h2>
                                 <hr>
                                 <p class="team-links">
                                     <a href="https://www.facebook.com/bhavesh.08081997" target="_blank"><i class="fab fa-facebook"></i></a>
