--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                             <center>
                                 <img src="./sources/imgs/sougatam.jpeg" alt="">
                                 <h1>Sougatam Das</h1>
-                                <h2>ECE 4th</h2>
+                                <h2>HITK ECE 4th</h2>
                                 <hr>
                                 <p class="team-links">
                                     <a href="https://www.facebook.com/heritageutsav2k19/" target="_blank"><i class="fab fa-facebook"></i></a>
