--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         Institute of Technology, Kolkata. Heritage Utsav 2019 is going to be organized from April 1st to 6th, 2019.
         Heritage Utsav will be filled with fun and ecstacy. Come and enjoy all the events.">
     <title>HU19 | Home ( Heritage Utsav 2019 )</title>
-    <link rel="icon" type="image/ico" href="sources/imgs/logo.png" />
+    <link rel="icon" type="image/ico" href="sources/imgs/logo/logo_qp5gce_c_scale,w_200.png" />
 
     <!-- bootstrap CDN -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -68,7 +68,7 @@
                 </video>
             </div>
 
-            <button class="hamburger hamburger--spring" type="button">
+            <button class="hamburger hamburger--spring" type="button" aria-label="Nav Button" role="navbar-control">
                 <span class="hamburger-box">
                 <span class="hamburger-inner"></span>
                 </span>
@@ -77,7 +77,7 @@
             <div class="row header-content">
                 <div class="col-lg-3"></div>
                 <div class="col-lg-3 header-logo">
-                    <img src="./sources/imgs/logo.png" alt="HU19 Logo">
+                    <img src="./sources/imgs/logo/logo_qp5gce_c_scale,w_954.png" alt="HU19 Logo">
                 </div>
                 <div class="col-lg-3 header-text">
                     <h1>
@@ -548,14 +548,14 @@
                 <br>
             </div>
             <div class="col-lg-7">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3685.6506485772456!2d88.41646975101429!3d22.517286940599575!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a027409f5382055%3A0xa47cf90c19bf73c2!2sHeritage+Institute+of+Technology!5e0!3m2!1sen!2sin!4v1553706793583" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <iframe title="HITK on map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3685.6506485772456!2d88.41646975101429!3d22.517286940599575!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a027409f5382055%3A0xa47cf90c19bf73c2!2sHeritage+Institute+of+Technology!5e0!3m2!1sen!2sin!4v1553706793583" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
         </div>
 
         <footer>
             <div class="row foot1">
                 <div class="col-lg-4">
-                    <h2 class="footer-head1"><img src="./sources/imgs/logo.png" alt="HU19 Logo" width="85px">HU19</h2>
+                    <h2 class="footer-head1"><img src="./sources/imgs/logo/logo_qp5gce_c_scale,w_811.png" alt="HU19 Logo" width="85px">HU19</h2>
                     <p style="font-size: 2.5vh;"></br>
                     &ldquo; Where possibilities</br>are endless.&rdquo;</p>
                 </div>
@@ -572,7 +572,7 @@
                     <br>
                     <p>For any queries regarding participation, sponsorship, schedule, etc. email us at <a href="">heritageutsav2019@gmail.com</a></p>
                     <p>Any constructive feedback and/or suggestion will also be appreciated.</p>
-                    <span class="footerLogo"><img src="./sources/imgs/logo.png" alt="HU19 Logo" width="28px"> <p style="display:inline;" >| HU19</p></span>
+                    <span class="footerLogo"><img src="./sources/imgs/logo/logo_qp5gce_c_scale,w_200.png" alt="HU19 Logo" width="28px"> <p style="display:inline;" >| HU19</p></span>
                 </div>
             </div>
             <div class="row foot2">
