--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Heritage Utsav is the annual cultural and tech fest of Heritage
-        Institute of Technology, Kolkata. Heritage Utsav 2019 is going to be organized from April 1st to 6th, 2019.
-        Heritage Utsav will be filled with fun and ecstacy. Come and enjoy all the events.">
+    <meta name="description" content="Heritage Utsav is the annualfest of Heritage
+        Institute of Technology. Heritage Utsav 2019 is going to be organized from April 1st to 6th, 2019.
+        Heritage Utsav will be filled with fun and ecstacy.">
     <title>HU19 | Home ( Heritage Utsav 2019 )</title>
     <link rel="icon" type="image/ico" href="sources/imgs/logo/logo_qp5gce_c_scale,w_200.png" />
 
@@ -54,7 +54,7 @@
                         <li><a href="#gal-head">Gallery</a></li>
                         <li><a href="#team-sec">Our Team</a></li>
                         <li><a href="#details-contact">Contact</a></li>
-                        <li><a href="http://61.12.70.61:615/HeritageUtsav19EvtRegd.aspx">Registeration</a></li>
+                        <li><a href="http://61.12.70.61:615/HeritageUtsav19EvtRegd.aspx">Registration</a></li>
                         <p id="nav-copyright">© 2019 HU19 All Rights Reserved</p>
                     </ul>
                 </div>
@@ -530,6 +530,7 @@
 
             </div>
         </div>
+
         <div id="details-contact" class="row contact-us">
             <div class="col-lg-5 contact-desc">
                 <h1>Contact Us</h1>
